--- a/bio.html
+++ b/bio.html
@@ -697,10 +697,7 @@ const questions = [
   {q:"Inheritance Q48: What is selective breeding and a disadvantage?", a:"Choosing parents for desired traits; can reduce genetic diversity (inbreeding).", cat:"Inheritance, variation and evolution"},
   {q:"Inheritance Q49: What is genetic engineering (one example)?", a:"Directly altering DNA, e.g., inserting a gene into bacteria to produce insulin.", cat:"Inheritance, variation and evolution"},
   {q:"Inheritance Q50: State one potential benefit and one concern of GM crops.", a:"Benefit: higher yield/pest resistance; Concern: biodiversity/ethical or economic issues.", cat:"Inheritance, variation and evolution"},
-    // =========================================================
-  // Inheritance, variation and evolution (Q51–Q75)
-  // =========================================================
-  {q:"Inheritance Q51: What is a Punnett square used to calculate?", a:"Probabilities of offspring genotypes and phenotypes.", cat:"Inheritance, variation and evolution"},
+     {q:"Inheritance Q51: What is a Punnett square used to calculate?", a:"Probabilities of offspring genotypes and phenotypes.", cat:"Inheritance, variation and evolution"},
   {q:"Inheritance Q52: In a cross Aa × aa, expected phenotype ratio (A dominant)?", a:"1:1 (half show dominant, half recessive).", cat:"Inheritance, variation and evolution"},
   {q:"Inheritance Q53: What does codominance mean?", a:"Both alleles in a heterozygote are expressed equally.", cat:"Inheritance, variation and evolution"},
   {q:"Inheritance Q54: What does incomplete dominance mean?", a:"Heterozygote has an intermediate phenotype between the two homozygotes.", cat:"Inheritance, variation and evolution"},
@@ -776,7 +773,7 @@ const questions = [
   {q:"Inheritance Q124: What is reproductive isolation?", a:"Barriers preventing interbreeding (prezygotic or postzygotic).", cat:"Inheritance, variation and evolution"},
   {q:"Inheritance Q125: Summarise speciation in three steps.", a:"Isolation → divergence (mutation/selection/drift) → reproductive isolation.", cat:"Inheritance, variation and evolution"},
   // ============================
-  // Ecology (Q1–Q25)
+  // Ecology (Q1–Q125)
   // ============================
   {q:"Ecology Q1: What is ecology?", a:"The study of interactions between organisms and their environment.", cat:"Ecology"},
   {q:"Ecology Q2: Define habitat.", a:"The place where an organism lives.", cat:"Ecology"},
@@ -853,10 +850,7 @@ const questions = [
   {q:"Ecology Q73: What is a detritivore? Give an example.", a:"Organism that ingests dead material; e.g., earthworm, woodlouse.", cat:"Ecology"},
   {q:"Ecology Q74: How does urbanisation affect habitats?", a:"Fragmentation, pollution, heat islands; can reduce or alter biodiversity.", cat:"Ecology"},
   {q:"Ecology Q75: Name one strategy to reduce landfill methane.", a:"Capture landfill gas for energy or reduce organic waste via composting.", cat:"Ecology"},
-  // ============================
-  // Ecology (Q76–Q100)
-  // ============================
-  {q:"Ecology Q76: What is rewilding?", a:"Allowing natural processes and species to return to restore ecosystems.", cat:"Ecology"},
+   {q:"Ecology Q76: What is rewilding?", a:"Allowing natural processes and species to return to restore ecosystems.", cat:"Ecology"},
   {q:"Ecology Q77: State one benefit of wildlife corridors.", a:"They connect fragmented habitats and allow gene flow/migration.", cat:"Ecology"},
   {q:"Ecology Q78: What is captive breeding?", a:"Breeding endangered species in zoos to boost numbers and reintroduce.", cat:"Ecology"},
   {q:"Ecology Q79: What is a bioindicator?", a:"A species whose presence/absence indicates environmental quality.", cat:"Ecology"},
@@ -881,10 +875,7 @@ const questions = [
   {q:"Ecology Q98: Why are wetlands important?", a:"They store carbon, filter water, and provide flood protection and habitat.", cat:"Ecology"},
   {q:"Ecology Q99: How do hedgerows aid farmland biodiversity?", a:"Provide shelter, nesting sites, corridors, and food for wildlife.", cat:"Ecology"},
   {q:"Ecology Q100: Name one way households can cut their carbon footprint.", a:"Insulation, public transport, reduce meat waste, renewable energy use.", cat:"Ecology"},
-  // ============================
-  // Ecology (Q101–Q125)
-  // ============================
-  {q:"Ecology Q101: What is ecological footprint?", a:"An estimate of the resources and land area needed to support a lifestyle.", cat:"Ecology"},
+   {q:"Ecology Q101: What is ecological footprint?", a:"An estimate of the resources and land area needed to support a lifestyle.", cat:"Ecology"},
   {q:"Ecology Q102: Give one household action to reduce water use.", a:"Fix leaks, low-flow devices, shorter showers, water plants in cool hours.", cat:"Ecology"},
   {q:"Ecology Q103: What is a carbon neutral action?", a:"An action whose net CO₂ emissions are zero after reductions/offsets.", cat:"Ecology"},
   {q:"Ecology Q104: Name one international agreement aimed at climate change.", a:"The Paris Agreement.", cat:"Ecology"},
@@ -910,7 +901,7 @@ const questions = [
   {q:"Ecology Q124: What is sustainable fishing quota for?", a:"To limit catches to levels stocks can replace.", cat:"Ecology"},
   {q:"Ecology Q125: Summarise three ways to protect biodiversity.", a:"Protect habitats, regulate exploitation, reduce pollution/invasives.", cat:"Ecology"},
   // ============================
-  // Key ideas (Q1–Q25)
+  // Key ideas (Q1–Q125)
   // ============================
   {q:"Key ideas Q1: Define diffusion.", a:"The net movement of particles from a region of higher concentration to lower concentration.", cat:"Key ideas"},
   {q:"Key ideas Q2: Define osmosis.", a:"The diffusion of water across a partially permeable membrane from dilute to more concentrated solution.", cat:"Key ideas"},
@@ -937,10 +928,7 @@ const questions = [
   {q:"Key ideas Q23: What is a pathogen?", a:"A microorganism that causes disease (bacteria, viruses, fungi, protists).", cat:"Key ideas"},
   {q:"Key ideas Q24: What is an antigen?", a:"A molecule on a pathogen’s surface that triggers an immune response.", cat:"Key ideas"},
   {q:"Key ideas Q25: What is herd immunity?", a:"When enough people are immune (by infection or vaccination) to reduce disease spread.", cat:"Key ideas"},
-  // ============================
-  // Key ideas (Q26–Q50)
-  // ============================
-  {q:"Key ideas Q26: Define independent variable.", a:"The variable you deliberately change to see its effect.", cat:"Key ideas"},
+   {q:"Key ideas Q26: Define independent variable.", a:"The variable you deliberately change to see its effect.", cat:"Key ideas"},
   {q:"Key ideas Q27: Define dependent variable.", a:"The variable you measure/observe in response.", cat:"Key ideas"},
   {q:"Key ideas Q28: Define control variables.", a:"Factors kept constant to ensure a fair test.", cat:"Key ideas"},
   {q:"Key ideas Q29: What is a hypothesis?", a:"A testable prediction explaining a relationship between variables.", cat:"Key ideas"},
@@ -965,6 +953,62 @@ const questions = [
   {q:"Key ideas Q48: Why use a control group in trials?", a:"To compare against treatment; isolates the treatment effect.", cat:"Key ideas"},
   {q:"Key ideas Q49: What is a risk assessment step?", a:"Identify hazards, estimate risk, and state control measures (PPE, procedure).", cat:"Key ideas"},
   {q:"Key ideas Q50: Name two common lab safety symbols.", a:"Corrosive, toxic, irritant, flammable, biohazard (any two).", cat:"Key ideas"},
+  // ============================
+  // Key ideas (Q51–Q75)
+  // ============================
+  {q:"Key ideas Q51: Define reliability in experimental data.", a:"The extent to which results are consistent when repeated.", cat:"Key ideas"},
+  {q:"Key ideas Q52: Define validity in an investigation.", a:"Whether the method measures what it intends to, with variables controlled.", cat:"Key ideas"},
+  {q:"Key ideas Q53: Why take repeats and a mean?", a:"To reduce random error and improve reliability.", cat:"Key ideas"},
+  {q:"Key ideas Q54: What is a line of best fit used for?", a:"To show trend and estimate values (interpolation).", cat:"Key ideas"},
+  {q:"Key ideas Q55: What is interpolation vs extrapolation?", a:"Interpolation estimates within the data range; extrapolation beyond it.", cat:"Key ideas"},
+  {q:"Key ideas Q56: Why plot error bars?", a:"To show variability/uncertainty around mean values.", cat:"Key ideas"},
+  {q:"Key ideas Q57: State the magnification triangle.", a:"I = A × M, so M = I/A and A = I/M (Image, Actual, Magnification).", cat:"Key ideas"},
+  {q:"Key ideas Q58: Convert: 2.5 mm to µm.", a:"2,500 µm.", cat:"Key ideas"},
+  {q:"Key ideas Q59: Convert: 750 µm to mm.", a:"0.75 mm.", cat:"Key ideas"},
+  {q:"Key ideas Q60: Percentage error formula (simple).", a:"% error ≈ (uncertainty ÷ measured value) × 100.", cat:"Key ideas"},
+  {q:"Key ideas Q61: Give two ways to improve precision.", a:"Use finer-scale equipment; control conditions; repeat more times.", cat:"Key ideas"},
+  {q:"Key ideas Q62: Give two ways to improve accuracy.", a:"Calibrate equipment; remove systematic error; use appropriate controls.", cat:"Key ideas"},
+  {q:"Key ideas Q63: What is a fair test?", a:"Only the independent variable is changed; others controlled.", cat:"Key ideas"},
+  {q:"Key ideas Q64: Define resolution of an instrument.", a:"The smallest change it can detect.", cat:"Key ideas"},
+  {q:"Key ideas Q65: What is a hazard vs risk?", a:"Hazard = potential source of harm; Risk = likelihood × severity.", cat:"Key ideas"},
+  {q:"Key ideas Q66: Name a PPE item and its purpose.", a:"Safety goggles—protect eyes from splashes.", cat:"Key ideas"},
+  {q:"Key ideas Q67: What does the biohazard symbol warn of?", a:"Risk from infectious biological materials.", cat:"Key ideas"},
+  {q:"Key ideas Q68: Why include a control in enzyme experiments?", a:"To show changes are due to enzyme action, not other factors.", cat:"Key ideas"},
+  {q:"Key ideas Q69: State two controls in a photosynthesis (pondweed) test.", a:"Keep temperature and CO₂ constant (or leaf area/species).", cat:"Key ideas"},
+  {q:"Key ideas Q70: State two controls in a diffusion/osmosis practical.", a:"Keep temperature and surface area/thickness constant.", cat:"Key ideas"},
+  {q:"Key ideas Q71: What is a calibration curve?", a:"Graph of known standards used to determine unknown concentrations.", cat:"Key ideas"},
+  {q:"Key ideas Q72: Why randomise quadrat placement in fieldwork?", a:"To avoid bias and improve representativeness.", cat:"Key ideas"},
+  {q:"Key ideas Q73: What is the mean, median, and mode?", a:"Average, middle value, and most frequent value of a dataset.", cat:"Key ideas"},
+  {q:"Key ideas Q74: Why label axes with units on graphs?", a:"To make data interpretation accurate and unambiguous.", cat:"Key ideas"},
+  {q:"Key ideas Q75: One reason to use a scatter graph.", a:"To explore correlation between two continuous variables.", cat:"Key ideas"},
+  // ============================
+  // Key ideas (Q76–Q100)
+  // ============================
+  {q:"Key ideas Q76: Why plot repeats as error bars rather than single points?", a:"To visualise variability/uncertainty around the mean.", cat:"Key ideas"},
+  {q:"Key ideas Q77: What is a confounding variable?", a:"A factor other than the independent variable that affects the dependent variable.", cat:"Key ideas"},
+  {q:"Key ideas Q78: State the units for rate in a typical enzyme reaction.", a:"Amount per time, e.g., cm³ O₂ s⁻¹ or change in absorbance min⁻¹.", cat:"Key ideas"},
+  {q:"Key ideas Q79: Why is a pilot study useful?", a:"It checks methods, ranges, and timing to refine the main experiment.", cat:"Key ideas"},
+  {q:"Key ideas Q80: Give one ethical consideration in biological investigations.", a:"Humane treatment of organisms and minimising harm.", cat:"Key ideas"},
+  {q:"Key ideas Q81: What is a null hypothesis?", a:"A statement that there is no effect or no difference.", cat:"Key ideas"},
+  {q:"Key ideas Q82: Why standardise measurement units and scales?", a:"To allow fair comparisons and reduce ambiguity.", cat:"Key ideas"},
+  {q:"Key ideas Q83: State the word equation for photosynthesis.", a:"Carbon dioxide + water → glucose + oxygen.", cat:"Key ideas"},
+  {q:"Key ideas Q84: State the balanced symbol equation for photosynthesis.", a:"6CO₂ + 6H₂O → C₆H₁₂O₆ + 6O₂.", cat:"Key ideas"},
+  {q:"Key ideas Q85: State the balanced symbol equation for aerobic respiration.", a:"C₆H₁₂O₆ + 6O₂ → 6CO₂ + 6H₂O.", cat:"Key ideas"},
+  {q:"Key ideas Q86: What is meant by ‘limiting factor’ in photosynthesis?", a:"The factor in shortest supply that restricts the rate.", cat:"Key ideas"},
+  {q:"Key ideas Q87: Why use a water bath in enzyme experiments?", a:"To keep temperature constant and control a key variable.", cat:"Key ideas"},
+  {q:"Key ideas Q88: Why label repeats clearly in a table?", a:"To make calculation of means and error analysis straightforward.", cat:"Key ideas"},
+  {q:"Key ideas Q89: Give one advantage of using medians for skewed data.", a:"The median is less affected by extreme values.", cat:"Key ideas"},
+  {q:"Key ideas Q90: What safety step is essential when heating alcohol?", a:"Use a water bath and keep away from naked flames—alcohol is flammable.", cat:"Key ideas"},
+  {q:"Key ideas Q91: State two controls for osmosis in potato cylinders.", a:"Same temperature and time; same starting length/diameter.", cat:"Key ideas"},
+  {q:"Key ideas Q92: What is calibration and why is it done?", a:"Setting an instrument to a known standard to remove systematic error.", cat:"Key ideas"},
+  {q:"Key ideas Q93: Why plot concentration on the x-axis?", a:"It is the independent variable chosen/controlled by the experimenter.", cat:"Key ideas"},
+  {q:"Key ideas Q94: How to make conclusions valid from a graph?", a:"Use trends within the data range and reference variability/controls.", cat:"Key ideas"},
+  {q:"Key ideas Q95: What is a control treatment?", a:"A comparison group where the independent variable is absent or set to baseline.", cat:"Key ideas"},
+  {q:"Key ideas Q96: Give one reason results may differ from expected.", a:"Uncontrolled variables, measurement error, or biological variation.", cat:"Key ideas"},
+  {q:"Key ideas Q97: When is a bar chart appropriate?", a:"For categorical/discrete data (separate groups).", cat:"Key ideas"},
+  {q:"Key ideas Q98: When is a scatter graph appropriate?", a:"For two continuous variables to explore correlation.", cat:"Key ideas"},
+  {q:"Key ideas Q99: What is the role of replication across sites/days in fieldwork?", a:"Improves representativeness and reliability.", cat:"Key ideas"},
+  {q:"Key ideas Q100: Final check before concluding from data?", a:"Assess reliability, validity, and whether results support/refute the hypothesis.", cat:"Key ideas"},
 
   
   
