--- a/bio.html
+++ b/bio.html
@@ -1009,6 +1009,34 @@ const questions = [
   {q:"Key ideas Q98: When is a scatter graph appropriate?", a:"For two continuous variables to explore correlation.", cat:"Key ideas"},
   {q:"Key ideas Q99: What is the role of replication across sites/days in fieldwork?", a:"Improves representativeness and reliability.", cat:"Key ideas"},
   {q:"Key ideas Q100: Final check before concluding from data?", a:"Assess reliability, validity, and whether results support/refute the hypothesis.", cat:"Key ideas"},
+  // ============================
+  // Key ideas (Q101–Q125)
+  // ============================
+  {q:"Key ideas Q101: Define qualitative vs quantitative data.", a:"Qualitative = descriptions/qualities; Quantitative = numerical measurements.", cat:"Key ideas"},
+  {q:"Key ideas Q102: Why random allocation in trials?", a:"To reduce selection bias and balance confounders between groups.", cat:"Key ideas"},
+  {q:"Key ideas Q103: What is a placebo and why use it?", a:"An inactive treatment used to control for psychological effects.", cat:"Key ideas"},
+  {q:"Key ideas Q104: Double-blind trial purpose?", a:"Neither participants nor assessors know the allocation → minimises bias.", cat:"Key ideas"},
+  {q:"Key ideas Q105: What is sample size power?", a:"Larger samples reduce random error and better detect real effects.", cat:"Key ideas"},
+  {q:"Key ideas Q106: Why cite uncertainties with means?", a:"They show confidence in the estimate (e.g., ± SD/SEM).", cat:"Key ideas"},
+  {q:"Key ideas Q107: One way to control temperature in experiments.", a:"Use a thermostatic water bath or incubator.", cat:"Key ideas"},
+  {q:"Key ideas Q108: One way to control pH in enzyme tests.", a:"Use buffer solutions of known pH.", cat:"Key ideas"},
+  {q:"Key ideas Q109: What is replication (biological repeats) vs technical repeats?", a:"Biological = different organisms/samples; Technical = repeated measures of the same sample.", cat:"Key ideas"},
+  {q:"Key ideas Q110: Why plot a calibration/standard curve first?", a:"To convert instrument readings into real concentrations.", cat:"Key ideas"},
+  {q:"Key ideas Q111: Give the rate formula from a straight-line graph.", a:"Rate = gradient = Δy ÷ Δx.", cat:"Key ideas"},
+  {q:"Key ideas Q112: What is a control *without* enzyme for?", a:"Shows if substrate changes without enzyme (baseline).", cat:"Key ideas"},
+  {q:"Key ideas Q113: Give two ways to increase reliability in field sampling.", a:"Increase quadrat number; randomise positions; repeat on different days.", cat:"Key ideas"},
+  {q:"Key ideas Q114: Why use the same organism mass/size in respiration tests?", a:"To keep biomass constant so rate comparisons are valid.", cat:"Key ideas"},
+  {q:"Key ideas Q115: Why standardise light distance in photosynthesis tests?", a:"Ensures consistent light intensity (inverse square law).", cat:"Key ideas"},
+  {q:"Key ideas Q116: What is a control diagram/table good practice?", a:"Clear titles, labelled axes/units, sensible significant figures.", cat:"Key ideas"},
+  {q:"Key ideas Q117: What’s a dependent variable example in osmosis potato test?", a:"Change in mass/length or % change.", cat:"Key ideas"},
+  {q:"Key ideas Q118: Give one hazard and control in microbiology.", a:"Pathogens—use aseptic technique, disinfect surfaces, flame sterilise loops.", cat:"Key ideas"},
+  {q:"Key ideas Q119: Sterile technique step before plating bacteria.", a:"Flame-sterilise loop and necks of bottles; open lids briefly.", cat:"Key ideas"},
+  {q:"Key ideas Q120: Why tape agar plates but incubate inverted?", a:"Taping limits contamination; inverted prevents condensation dripping on cultures.", cat:"Key ideas"},
+  {q:"Key ideas Q121: Why avoid incubating school plates at 37 °C?", a:"To reduce growth of human pathogens; use ~25 °C instead.", cat:"Key ideas"},
+  {q:"Key ideas Q122: Fair test in transpiration experiments—name two controls.", a:"Same leaf area and temperature; same air movement/light.", cat:"Key ideas"},
+  {q:"Key ideas Q123: Percentage yield formula (biomass/energy).", a:"% = (actual ÷ theoretical) × 100.", cat:"Key ideas"},
+  {q:"Key ideas Q124: Why show units in tables/axes once, not every cell?", a:"Improves clarity and avoids repetition; units in headers.", cat:"Key ideas"},
+  {q:"Key ideas Q125: Final checklist for a good conclusion.", a:"State trend; support with data; mention reliability/validity/limits and improvements.", cat:"Key ideas"},
 
   
   
