--- a/bio.html
+++ b/bio.html
@@ -953,10 +953,7 @@ const questions = [
   {q:"Key ideas Q48: Why use a control group in trials?", a:"To compare against treatment; isolates the treatment effect.", cat:"Key ideas"},
   {q:"Key ideas Q49: What is a risk assessment step?", a:"Identify hazards, estimate risk, and state control measures (PPE, procedure).", cat:"Key ideas"},
   {q:"Key ideas Q50: Name two common lab safety symbols.", a:"Corrosive, toxic, irritant, flammable, biohazard (any two).", cat:"Key ideas"},
-  // ============================
-  // Key ideas (Q51–Q75)
-  // ============================
-  {q:"Key ideas Q51: Define reliability in experimental data.", a:"The extent to which results are consistent when repeated.", cat:"Key ideas"},
+    {q:"Key ideas Q51: Define reliability in experimental data.", a:"The extent to which results are consistent when repeated.", cat:"Key ideas"},
   {q:"Key ideas Q52: Define validity in an investigation.", a:"Whether the method measures what it intends to, with variables controlled.", cat:"Key ideas"},
   {q:"Key ideas Q53: Why take repeats and a mean?", a:"To reduce random error and improve reliability.", cat:"Key ideas"},
   {q:"Key ideas Q54: What is a line of best fit used for?", a:"To show trend and estimate values (interpolation).", cat:"Key ideas"},
@@ -981,10 +978,7 @@ const questions = [
   {q:"Key ideas Q73: What is the mean, median, and mode?", a:"Average, middle value, and most frequent value of a dataset.", cat:"Key ideas"},
   {q:"Key ideas Q74: Why label axes with units on graphs?", a:"To make data interpretation accurate and unambiguous.", cat:"Key ideas"},
   {q:"Key ideas Q75: One reason to use a scatter graph.", a:"To explore correlation between two continuous variables.", cat:"Key ideas"},
-  // ============================
-  // Key ideas (Q76–Q100)
-  // ============================
-  {q:"Key ideas Q76: Why plot repeats as error bars rather than single points?", a:"To visualise variability/uncertainty around the mean.", cat:"Key ideas"},
+   {q:"Key ideas Q76: Why plot repeats as error bars rather than single points?", a:"To visualise variability/uncertainty around the mean.", cat:"Key ideas"},
   {q:"Key ideas Q77: What is a confounding variable?", a:"A factor other than the independent variable that affects the dependent variable.", cat:"Key ideas"},
   {q:"Key ideas Q78: State the units for rate in a typical enzyme reaction.", a:"Amount per time, e.g., cm³ O₂ s⁻¹ or change in absorbance min⁻¹.", cat:"Key ideas"},
   {q:"Key ideas Q79: Why is a pilot study useful?", a:"It checks methods, ranges, and timing to refine the main experiment.", cat:"Key ideas"},
@@ -1009,10 +1003,7 @@ const questions = [
   {q:"Key ideas Q98: When is a scatter graph appropriate?", a:"For two continuous variables to explore correlation.", cat:"Key ideas"},
   {q:"Key ideas Q99: What is the role of replication across sites/days in fieldwork?", a:"Improves representativeness and reliability.", cat:"Key ideas"},
   {q:"Key ideas Q100: Final check before concluding from data?", a:"Assess reliability, validity, and whether results support/refute the hypothesis.", cat:"Key ideas"},
-  // ============================
-  // Key ideas (Q101–Q125)
-  // ============================
-  {q:"Key ideas Q101: Define qualitative vs quantitative data.", a:"Qualitative = descriptions/qualities; Quantitative = numerical measurements.", cat:"Key ideas"},
+   {q:"Key ideas Q101: Define qualitative vs quantitative data.", a:"Qualitative = descriptions/qualities; Quantitative = numerical measurements.", cat:"Key ideas"},
   {q:"Key ideas Q102: Why random allocation in trials?", a:"To reduce selection bias and balance confounders between groups.", cat:"Key ideas"},
   {q:"Key ideas Q103: What is a placebo and why use it?", a:"An inactive treatment used to control for psychological effects.", cat:"Key ideas"},
   {q:"Key ideas Q104: Double-blind trial purpose?", a:"Neither participants nor assessors know the allocation → minimises bias.", cat:"Key ideas"},
@@ -1039,7 +1030,11 @@ const questions = [
   {q:"Key ideas Q125: Final checklist for a good conclusion.", a:"State trend; support with data; mention reliability/validity/limits and improvements.", cat:"Key ideas"},
 
   
-  
+ ];
+
+/* =====================
+   單張 Flashcard 模式
+   ===================== */ 
   
 const cardsContainer = document.getElementById("cards");
 const filterSelect   = document.getElementById("categoryFilter");
